# mqttconsumer

./: DESCRIPTION.md  LICENSE  LICENSE_LIBRARIES  README.md  example.py  pyproject.toml
mqtt_consumer/: mqtt_consumer.py
mqttconsumer/: __init__.py  mqtt_consumer.py
tests/: __init__.py  config.py  test_mqttconsumer.py
