[tool.poetry]
name = "mqttconsumer"
version = "0.1.0"
description = ""
authors = ["Martin Trat <trat@fzi.de>"]

[tool.poetry.dependencies]
python = "3.9.*"
paho-mqtt = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
